v8/tests/messages/undefined-access.out
undefined-access.js:1: Uncaught TypeError: Cannot read property 'x' of undefined
(void 0).x
        ^
